translation correction, footer z-index correction

--- a/themes/profumo-labo/_dev/css/theme/components/home/_base.scss
+++ b/themes/profumo-labo/_dev/css/theme/components/home/_base.scss
@@ -607,3 +607,7 @@
         
     }
 }
+
+.homepage-slider-wrapper {
+    z-index: 10;
+}
