--- a/themes/profumo-labo/_dev/css/theme/layout/_footer.scss
+++ b/themes/profumo-labo/_dev/css/theme/layout/_footer.scss
@@ -10,7 +10,7 @@
 }
 
 .paralax-placeholder {
-  z-index: -1;
+  z-index: 1;
   position: relative;
 }
 
@@ -21,7 +21,7 @@
 
   position: fixed;
   bottom: 0;
-  z-index: -2;
+  z-index: 2;
   width: 100%;
   @include media-breakpoint-down(sm) {
     padding-top: 188px;
